fix background and truncate profile card

--- a/client/src/styles/login.scss
+++ b/client/src/styles/login.scss
@@ -2,7 +2,6 @@
   display: flex;
   width: 100%;
   height: 100vh;
-  background: url(background.jpg);
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-size: 70%;
@@ -26,7 +25,7 @@
 
     h1 {
       font-size: 20px;
-      font-family: 'Poppins', sans-serif;
+      font-family: "Poppins", sans-serif;
       font-weight: 600;
       margin-left: 10px;
       color: #bdbdbd;
@@ -50,16 +49,18 @@
     font-size: 36px;
     margin-top: 30px;
     margin-bottom: 15px;
-    font-family: 'Poppins', sans-serif;
+    font-family: "Poppins", sans-serif;
     font-weight: 600;
   }
-  input, button, label {
+  input,
+  button,
+  label {
     display: block;
   }
   label {
-    color: #6F747F;
+    color: #6f747f;
     font-size: 14px;
-    font-family: 'Poppins', sans-serif;
+    font-family: "Poppins", sans-serif;
     font-weight: 600;
     display: block;
     margin-top: 15px;
@@ -67,17 +68,17 @@
   }
   input {
     padding: 5px 10px;
-    border: 1px solid #DBDBDB;
+    border: 1px solid #dbdbdb;
     border-radius: 7px;
     margin-bottom: 10px;
-    font-family: 'Poppins', sans-serif;
+    font-family: "Poppins", sans-serif;
     font-weight: 500;
-    color: #6F747F;
+    color: #6f747f;
     width: 100%;
   }
 
   button {
-    background: #444DE7;
+    background: #444de7;
     color: white;
     border: none;
     padding: 10px 0;
@@ -85,7 +86,7 @@
     border-radius: 7px;
     margin-top: 15px;
     margin-bottom: 30px;
-    font-family: 'Poppins', sans-serif;
+    font-family: "Poppins", sans-serif;
     font-weight: 500;
     font-size: 18px;
     transition: all 300ms;
@@ -97,17 +98,18 @@
 
   input:focus {
     outline: none;
-    border: 1px solid #444DE7;
-    box-shadow: 0 0 0 1px #444DE7;
+    border: 1px solid #444de7;
+    box-shadow: 0 0 0 1px #444de7;
   }
 
   .alternate-login {
-    font-family: 'Roboto', sans-serif;
+    font-family: "Roboto", sans-serif;
     font-weight: 500;
     text-align: center;
 
-    a, a:visited {
-      color: #444DE7;
+    a,
+    a:visited {
+      color: #444de7;
       transition: all 300ms;
     }
     a:hover {
@@ -141,14 +143,14 @@
     color: white;
 
     h2 {
-      font-family: 'Poppins', sans-serif;
+      font-family: "Poppins", sans-serif;
       font-weight: 700;
       font-size: 48px;
       margin-bottom: 15px;
     }
-    
+
     p {
-      font-family: 'Roboto', sans-serif;
+      font-family: "Roboto", sans-serif;
       font-size: 18px;
       margin-bottom: 40px;
     }
